@@ -14,11 +14,13 @@ namespace Monodoc.Editor.Utils {
 public class MonoDocument {
 	private bool valid;
 	private string text;
+	private string name;
 	
 	public MonoDocument (string filePath)
 	{
 		EcmaReader reader = new EcmaReader (filePath);
 		valid = reader.Valid;
+		name = Path.GetFileName (filePath);
 		
 		using (FileStream filestream= new FileStream (filePath, FileMode.Open)) {
 			using (StreamReader stream = new StreamReader (filestream)) {
@@ -36,6 +38,12 @@ public class MonoDocument {
 	public bool Valid {
 		get {
 			return valid;
+		}
+	}
+	
+	public string Name {
+		get {
+			return name;
 		}
 	}
 }
