@@ -1,3 +1,8 @@
+2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* MonoDocument.cs: A new property to get the filename of the target
+	  documentation.
+
 2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* MonoDocument.cs: Deleted document property.
